--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "projectportfolio",
-  "homepage": "https://akashs04.github.io/reactportfolio-akash"
+  "homepage": "https://akashs04.github.io/reactportfolio_akash"
   "private": true,
   "version": "0.0.0",
   "type": "module",
