--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
+  "homepage": "https://akashs04.github.io/reactportfolio_akash",
   "name": "projectportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
-   
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -18,7 +20,7 @@
     "@mui/material": "^6.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
